# AI-ASM

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
bench/: README.md  __init__.py  candidates.md  run_bench.py  targets.yaml
bench/services/: README.md  compose.candidates.yaml
docs/dev/: current_changes.md  phase2.md  phase3.md  phase4.md  phase5.5.md  phase5.md  phase6.md
examples/: catholic.yaml  crapi_scan_config.yaml  juice_shop.yaml  juice_shop_form_data.yaml  scan_config.yaml
examples/bench/: dvga.yaml  dvna.yaml  dvwa.yaml  go_httpbin.yaml  petstore.yaml  restful_booker.yaml  vampi.yaml  (+2 more)
scripts/: analyze_agent_trace.py  juice_shop_coverage.py  openapi_path_coverage.py
step/: current_changes.md  phase0.md  phase1.md  phase4.md  phase5.5.md  phase6.md
tests/: test_agent_behavior.py  test_agent_context.py  test_agent_driver.py  test_agent_loop.py  test_agent_network.py  test_agent_planner.py  test_agent_safety.py  test_agent_tools.py  test_artifacts.py  test_bench_runner.py  test_browser.py  test_cache_buster.py  test_cli.py  test_config.py  test_db.py  test_dispatcher.py  test_flagged_export.py  test_form_data.py  test_interactions.py  test_juice_shop_coverage.py  test_openai_client.py  test_openapi_export.py  test_openapi_path_coverage.py  test_params.py  test_pipeline.py  test_request_log.py  test_runner.py  test_scan_orchestrator.py  test_schema_inferrer.py  test_scope.py  test_shared_stores.py  test_snapshot.py  test_static_discovery.py  test_static_probe.py  test_static_probe_auth.py  test_url.py  test_url_surface.py
(+109 files in other folders)
