[project]
name = "ai-asm"
version = "0.1.0"
description = "Bug bounty attack surface mapper — automated endpoint, parameter, and header discovery."
authors = [
    { name = "aestera", email = "aest3ra@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai>=2.34.0",
    "playwright>=1.59.0",
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
    "sqlmodel>=0.0.38",
    "typer>=0.25.1",
]

[project.scripts]
ai-asm = "ai_asm.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
